refactor major